<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
style="@style/AppTheme"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:gravity="center_horizontal"
android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/textview_update_title"
        android:gravity="start"
        android:measureWithLargestChild="true"
        android:text="@string/text_forgot_password"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:textColor="@color/text_icons"
        android:layout_margin="2dp"
        android:orientation="horizontal">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/textview_username"
        android:gravity="start"
        android:measureWithLargestChild="true"
        android:text="@string/hint_username"
        android:textSize="15sp"
        android:textColor="@color/text_icons"
        android:layout_margin="2dp"
        android:layout_below="@+id/textview_update_title"
        android:orientation="horizontal">
    </TextView>

    <EditText
        android:id="@+id/edittext_username"
        android:textColor="@android:color/black"
        android:gravity="fill"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_username"
        android:layout_alignParentStart="true"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/textview_email"
        android:measureWithLargestChild="true"
        android:text="@string/hint_email"
        android:textSize="15sp"
        android:textColor="@color/text_icons"
        android:layout_margin="2dp"
        android:layout_below="@+id/edittext_username"
        android:orientation="horizontal">
    </TextView>

    <EditText
        android:id="@+id/edittext_email"
        android:textColor="@android:color/black"
        android:gravity="fill"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_email"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/textview_new_password"
        android:measureWithLargestChild="true"
        android:text="@string/hint_new_password"
        android:textSize="15sp"
        android:textColor="@color/text_icons"
        android:layout_margin="2dp"
        android:layout_below="@+id/edittext_email"
        android:orientation="horizontal">
    </TextView>

    <EditText
        android:id="@+id/edittext_new_password"
        android:textColor="@android:color/black"
        android:gravity="fill"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_new_password"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/textview_new_password_again"
        android:measureWithLargestChild="true"
        android:text="@string/hint_new_password_again"
        android:textSize="15sp"
        android:textColor="@color/text_icons"
        android:layout_margin="2dp"
        android:layout_below="@+id/edittext_new_password"
        android:orientation="horizontal">
    </TextView>

    <EditText
        android:id="@+id/edittext_new_password_again"
        android:textColor="@android:color/black"
        android:gravity="fill"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_new_password_again"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_update_password"
        android:textColor="@color/text_primary"
        android:id="@+id/button_update"
        android:background="@drawable/button"
        android:layout_above="@+id/button_update_cancel"
        android:layout_marginBottom="10dp"
        android:layout_alignEnd="@+id/textview_new_password_again" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_cancel"
        android:id="@+id/button_update_cancel"
        android:background="@drawable/button_yellow"
        android:layout_alignParentBottom="true" />

</RelativeLayout>