<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/AppTheme"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/textview_question_number"
        android:gravity="start"
        android:measureWithLargestChild="true"
        android:textSize="15sp"
        android:textColor="@color/black_overlay"
        android:layout_margin="2dp"
        android:orientation="horizontal">
    </TextView>

    <EditText
        android:id="@+id/edittext_create_question"
        android:textColor="@android:color/black"
        android:gravity="fill"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_question_number"
        android:layout_alignParentStart="true"
        android:hint="@string/pleaseInsertText"
         />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/scrollViewChoices"
        android:layout_below="@+id/spinner_question_type"
        android:layout_alignParentStart="true">
    <TextView
        android:id="@+id/textview_create_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@drawable/fragment_list_selector"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:singleLine="false"
        android:maxLines="10"
        android:scrollbars="vertical"/>
    </ScrollView>

    <Spinner
        android:id="@+id/spinner_question_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/button_add_question_type_text"
        android:textColor="@color/text_primary"
        android:entries="@array/question_type"
        android:spinnerMode="dialog"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/edittext_create_question"
        android:layout_alignStart="@+id/textview_question_number" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout2">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_preview_text"
            android:layout_margin="5dp"
            android:id="@+id/button_preview_the_survey"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:layout_above="@+id/linearLayout2" />

        <Button
            android:id="@+id/button_edit_the_survey"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/button_edit_text"
            android:textColor="@color/text_primary" />
        <Button
            android:id="@+id/button_next_question"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/button_next_text"
            android:textColor="@color/text_primary" />

        <Button
            android:id="@+id/button_save_the_survey"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/button_save_text"
            android:textColor="@color/text_primary"
            />

    </LinearLayout>


</RelativeLayout>