<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
style="@style/AppTheme"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:gravity="center_horizontal"
android:orientation="vertical">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id = "@+id/tv_sign_up_title"
    android:gravity="start"
    android:measureWithLargestChild="true"
    android:text="@string/text_sign_up"
    android:textSize="30sp"
    android:textAllCaps="true"
    android:textColor="@color/text_icons"
    android:layout_margin="2dp"
    android:orientation="horizontal">
</TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/tv_sign_up_username"
        android:gravity="start"
        android:measureWithLargestChild="true"
        android:text="@string/hint_username"
        android:textSize="15sp"
        android:textColor="@color/text_icons"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_sign_up_title">
    </TextView>

    <EditText
        android:id="@+id/et_sign_up_username"
        android:textColor="@android:color/black"
        android:gravity="fill"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_sign_up_username"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/tv_sign_up_email"
        android:measureWithLargestChild="true"
        android:text="@string/hint_email"
        android:textSize="15sp"
        android:textColor="@color/text_icons"
        android:layout_margin="2dp"
        android:layout_below="@+id/et_sign_up_username"
        android:orientation="horizontal">
    </TextView>

    <EditText
        android:id="@+id/et_sign_up_email"
        android:textColor="@android:color/black"
        android:gravity="fill"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/tv_sign_up_email"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/tv_sign_up_password"
        android:measureWithLargestChild="true"
        android:text="@string/hint_password"
        android:textSize="15sp"
        android:textColor="@color/text_icons"
        android:layout_margin="2dp"
        android:layout_below="@+id/et_sign_up_email"
        android:orientation="horizontal">
    </TextView>

    <EditText
        android:id="@+id/et_sign_up_password"
        android:textColor="@android:color/black"
        android:gravity="fill"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_sign_up_password"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/tv_sign_up_password_again"
        android:measureWithLargestChild="true"
        android:text="@string/hint_confirm_password"
        android:textSize="15sp"
        android:textColor="@color/text_icons"
        android:layout_margin="2dp"
        android:layout_below="@+id/et_sign_up_password"
        android:orientation="horizontal">
    </TextView>

    <EditText
        android:id="@+id/et_sign_up_password_again"
        android:textColor="@android:color/black"
        android:gravity="fill"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_sign_up_password_again"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_activation_key"
        android:orientation="horizontal"

        android:id="@+id/rg_role">
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_coordinator"
            android:id="@+id/radioButtonCoordinator"
             />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/tv_activation_key"
        android:measureWithLargestChild="true"
        android:text="@string/hint_activation_code"
        android:textSize="15sp"
        android:textColor="@color/text_icons"
        android:layout_margin="2dp"
        android:layout_below="@+id/et_sign_up_password_again"
        android:orientation="horizontal">
    </TextView>
    <EditText
        android:id="@+id/et_activation_key"
        android:textColor="@android:color/black"
        android:gravity="fill"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_activation_key"
        android:layout_alignParentStart="true"
        android:inputType="text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/text_sign_up"
            android:textColor="@color/text_primary"
            android:id="@+id/button_Sign_Up"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/text_cancel"
            android:id="@+id/button_Sign_Up_cancel"
            android:background="@drawable/button_yellow"
             />
    </LinearLayout>






</RelativeLayout>